--- a/CCS-Uploader/Controllers/Prefs/AdvancedView.xib
+++ b/CCS-Uploader/Controllers/Prefs/AdvancedView.xib
@@ -1,23 +1,30 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment version="1070" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5053"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="AdvancedViewController">
             <connections>
+                <outlet property="btnDetectRotations" destination="exQ-Ya-SQl" id="BJD-Ck-fDN"/>
+                <outlet property="chkDetectNewFiles" destination="iEc-6E-LB7" id="rYA-ts-PNP"/>
+                <outlet property="chkHideImages" destination="ziV-PQ-8rS" id="apo-Rv-ztr"/>
+                <outlet property="txtRemoveStringFromFilename" destination="6UU-Jn-6k4" id="gdR-hY-aOA"/>
+                <outlet property="txtRemoveStringFromFilenames" destination="6UU-Jn-6k4" id="kHH-Cy-0uv"/>
+                <outlet property="txtReplaceWithStringInFilename" destination="YTf-fJ-1kl" id="OeY-Am-zJs"/>
+                <outlet property="txtReplaceWithStringInFilenames" destination="YTf-fJ-1kl" id="7MW-a3-xgj"/>
                 <outlet property="view" destination="1" id="2"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
         <customView id="1">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="306"/>
+            <rect key="frame" x="0.0" y="0.0" width="480" height="309"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <box autoresizesSubviews="NO" fixedFrame="YES" title="Auto Detection" borderType="line" translatesAutoresizingMaskIntoConstraints="NO" id="ne6-XO-T3U">
-                    <rect key="frame" x="-3" y="213" width="486" height="93"/>
+                    <rect key="frame" x="-3" y="216" width="486" height="93"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <view key="contentView">
                         <rect key="frame" x="1" y="1" width="484" height="77"/>
@@ -33,7 +40,7 @@
                                 </textFieldCell>
                             </textField>
                             <popUpButton verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="exQ-Ya-SQl">
-                                <rect key="frame" x="268" y="43" width="201" height="26"/>
+                                <rect key="frame" x="272" y="43" width="197" height="26"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="AhS-cB-LDv">
                                     <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
@@ -41,8 +48,8 @@
                                     <menu key="menu" title="OtherViews" id="Y9T-U7-G1P">
                                         <items>
                                             <menuItem title="Always" id="8Kc-8y-Pvl"/>
-                                            <menuItem title="Prompt me for each event" id="w3y-zg-pQZ"/>
-                                            <menuItem title="Never" id="m5r-Me-LQg"/>
+                                            <menuItem title="Prompt me for each event" tag="1" id="w3y-zg-pQZ"/>
+                                            <menuItem title="Never" tag="2" id="m5r-Me-LQg"/>
                                         </items>
                                     </menu>
                                 </popUpButtonCell>
@@ -72,14 +79,14 @@
                     <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </box>
                 <box autoresizesSubviews="NO" fixedFrame="YES" title="Auto Filename Find &amp; Replace" borderType="line" translatesAutoresizingMaskIntoConstraints="NO" id="6wB-py-n6A">
-                    <rect key="frame" x="-3" y="67" width="486" height="142"/>
+                    <rect key="frame" x="-3" y="70" width="486" height="142"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <view key="contentView">
                         <rect key="frame" x="1" y="1" width="484" height="126"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6ik-cD-ceS">
-                                <rect key="frame" x="16" y="101" width="370" height="17"/>
+                                <rect key="frame" x="16" y="101" width="452" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="When loading images, remove this text from the filename:" id="TAL-ME-hqR">
                                     <font key="font" metaFont="system"/>
@@ -88,7 +95,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SVi-N1-R1h">
-                                <rect key="frame" x="16" y="46" width="114" height="17"/>
+                                <rect key="frame" x="16" y="46" width="452" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="And replace with:" id="EFu-jB-GLh">
                                     <font key="font" metaFont="system"/>
@@ -104,6 +111,9 @@
                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
+                                <connections>
+                                    <outlet property="nextKeyView" destination="YTf-fJ-1kl" id="zG1-da-GrV"/>
+                                </connections>
                             </textField>
                             <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YTf-fJ-1kl">
                                 <rect key="frame" x="18" y="16" width="448" height="22"/>
@@ -113,6 +123,9 @@
                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
+                                <connections>
+                                    <outlet property="nextKeyView" destination="6UU-Jn-6k4" id="Kda-Z6-1pN"/>
+                                </connections>
                             </textField>
                         </subviews>
                     </view>
@@ -120,7 +133,7 @@
                     <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </box>
                 <box autoresizesSubviews="NO" fixedFrame="YES" title="Remote Image Settings" borderType="line" translatesAutoresizingMaskIntoConstraints="NO" id="fNv-TQ-xM9">
-                    <rect key="frame" x="-3" y="-4" width="486" height="67"/>
+                    <rect key="frame" x="-3" y="-1" width="486" height="67"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <view key="contentView">
                         <rect key="frame" x="1" y="1" width="484" height="51"/>
