--- a/CCS-Uploader/Controllers/Wizard/BrowseView.xib
+++ b/CCS-Uploader/Controllers/Wizard/BrowseView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment version="1070" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
-        <plugIn identifier="com.apple.imagekit.ibplugin" version="3338"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5053"/>
+        <plugIn identifier="com.apple.imagekit.ibplugin" version="5053"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="BrowseViewController">
@@ -413,10 +413,13 @@
                 <button id="QfY-Fh-1Qt">
                     <rect key="frame" x="18" y="106" width="270" height="18"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <buttonCell key="cell" type="check" title="Auto categorize images by folder name" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="4Cb-gi-522">
+                    <buttonCell key="cell" type="check" title="Auto categorize images by folder name" bezelStyle="regularSquare" imagePosition="left" inset="2" id="4Cb-gi-522">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
+                    <connections>
+                        <action selector="autoCategorizeClicked:" target="-2" id="eV4-4G-UBe"/>
+                    </connections>
                 </button>
                 <button id="ht2-c3-hbU">
                     <rect key="frame" x="18" y="84" width="301" height="18"/>
